--- a/share/icicle.css
+++ b/share/icicle.css
@@ -1,46 +1,37 @@
 /*
  * icicle.css: styles for Icicle visualization
  */
-body {
-	font-family: sans-serif;
+.icicle div#chart {
+	width: 100%;
 	font-size: small;
+	margin-top: 20px;
 	padding-left: 20px;
 	padding-right: 20px;
 	color: #333333;
 }
 
-a {
-	color: #CC2900;
-}
-
-div#chart {
-	width: 100%;
-	margin-top: 20px;
-}
-
-rect.svBox {
+.icicle rect.svBox {
 	stroke: #fff;
 }
 
-rect.svBox:hover {
+.icicle rect.svBox:hover {
 	cursor: pointer;
 }
 
-.svBoxLabel {
+.icicle .svBoxLabel {
 	cursor: pointer;
 	fill: #333333;
 }
 
-div.svTooltip {
+.icicle div.svTooltip {
 	opacity: 0;
 	z-index: 2;
 	position: absolute;           
-	height: 3em;                 
 	white-space: nowrap;
 	padding-top: 8px;             
 	padding-left: 12px;
 	padding-right: 12px;
-	padding-bottom: 18px;
+	padding-bottom: 12px;
 	font-size: small;
 	background: #ffffee;   
 	border: 0px;
@@ -48,7 +39,7 @@ div.svTooltip {
 	pointer-events: none;  
 }
 
-div.svPopout {
+.icicle div.svPopout {
 	position: absolute;
 	border-radius: 2px;
 	border: 2px #333333 solid;
@@ -57,9 +48,10 @@ div.svPopout {
 	opacity: 0;
 	z-index: -1;
 	width: 50%;
+	box-sizing: content-box;
 }
 
-.svXAxisLabel {
+.icicle .svXAxisLabel {
 	font-size: large;
 	font-weight: bold;
 	font-variant: small-caps;
@@ -69,7 +61,7 @@ div.svPopout {
 	margin-bottom: 20px;
 }
 
-.svYAxisLabel {
+.icicle .svYAxisLabel {
 	font-size: large;
 	font-weight: bold;
 	font-variant: small-caps;
